--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/c76170a420.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -19,7 +20,7 @@
             <ul>
                 <li>Portfolio</li>
                 <li>Blog</li>
-                <li><button class="btn-styles">Hire Me</button></li>
+                <li><button class="btn-styles btn">Hire Me</button></li>
             </ul>
         </nav>
         <div class="banner">
@@ -28,11 +29,11 @@
                 <h1 class="banner-title">Azizul Haque</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly <br> he.
                     Morning because as to society behaved moments.</p>
-                <button class="btn-styles">DownLoad CV</button>
-                <button class="clean-btn"> Contact</button>
+                <button class="btn-styles btn"><i class="fa-solid fa-download"></i> DownLoad CV</button>
+                <button class="clean-btn btn"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <div>
-                <img style="width: 91%;" src="./images/hardy.png" alt="">
+                <img style="width: 91%;" class="hardy-img" src="./images/hardy.png" alt="">
             </div>
 
         </div>
@@ -147,7 +148,7 @@
         </div>
        
     </div>
-    <button class="btn-styles align-center">DownLoad CV</button>
+     <div class="align-center">  <button class="btn-styles btn align-center"><i class="fa-solid fa-download"></i> DownLoad CV</button></div>
    
 
     </section>
@@ -179,7 +180,7 @@
             </textarea>
            </label>
             <br>
-            <input class="btn-styles" type="submit" value="Submit">
+            <input class="btn-styles btn" type="submit" value="Submit">
 
         </form>
        </div>
